--- a/index.html
+++ b/index.html
@@ -6,22 +6,16 @@
     <title>Tushaar Mehtaa - Personal Website</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        :root {
-            --bg-color: #f0f0f0;
-            --text-color: #333;
-        }
         body {
             font-family: 'Montserrat', sans-serif;
             line-height: 1.6;
-            color: var(--text-color);
+            color: #333;
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: var(--bg-color);
-            transition: background-color 0.3s, color 0.3s;
         }
         h1, h2 {
-            border-bottom: 1px solid var(--text-color);
+            border-bottom: 1px solid #333;
             padding-bottom: 10px;
         }
         .project, .writing {
@@ -34,36 +28,22 @@
         }
         .connect-icons a {
             text-decoration: none;
-            color: var(--text-color);
+            color: #333;
             font-size: 24px;
         }
         #profile-photo {
             width: 100%;
-            height: 300px;
-            object-fit: cover;
-            margin-bottom: 20px;
-        }
-        #theme-toggle {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: none;
-            border: none;
-            font-size: 24px;
-            cursor: pointer;
-        }
-        .dark-mode {
-            --bg-color: #333;
-            --text-color: #f0f0f0;
+            max-width: 300px;
+            height: auto;
+            display: block;
+            margin: 20px auto;
         }
     </style>
 </head>
 <body>
-    <button id="theme-toggle">🌓</button>
-
     <header>
         <h1>Tushaar Mehtaa</h1>
-        <img id="profile-photo" src="https://via.placeholder.com/800x300" alt="Tushaar Mehtaa">
+        <img id="profile-photo" src="your-photo.jpg" alt="Tushaar Mehtaa">
         <p>Hello, this is some of the stuff I keep on the Internet. Here you can find almost everything about me, things I've done, things I'm doing, things I want to do and things I'm really obsessed with.</p>
     </header>
 
@@ -71,8 +51,8 @@
         <h2>About Me</h2>
         <ul>
             <li>I'm a simple writer - yes, that's a thing. I just write, and my North Star is clarity of thought.</li>
-            <li>I've been lucky enough to work with some amazing folks since I started out, including Ayush Wadhwa, Paras Chopra, Saumya Saxena, and so many more founders I really admire.</li>
-            <li>Speaking of numbers, I've done millions of impressions across platforms and content types, whether reels, tweets, or posts.</li>
+            <li>I've been lucky enough to work with some amazing folks since I started out, including <a href="https://x.com/AyushkWadhwa">Ayush Wadhwa</a>, <a href="https://x.com/paraschopra">Paras Chopra</a>, <a href="https://x.com/Saxenasaheb">Saumya Saxena</a>, and so many more founders I really admire.</li>
+            <li>Speaking of numbers, I've done millions of impressions across platforms and content types, whether <a href="https://www.instagram.com/builders.central/">reels</a>, <a href="https://x.com/tushaarmehtaa/status/1765270035721822483">tweets</a>, or <a href="https://www.linkedin.com/posts/karthiksridharan1_startup-activity-7212686224094810112-fMZP?utm_source=share&utm_medium=member_desktop">posts</a>.</li>
             <li>Currently, I am playing around with Generative AI (not the whole AI - not that technical at the moment) - have been working on a couple of ideas.</li>
         </ul>
     </section>
@@ -80,7 +60,7 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>JimBro</h3>
+            <h3><a href="https://jimbro.framer.ai/">JimBro</a></h3>
             <p>Name sounds funny, but I'm trying to make it easier than ever to log workouts using voice and AI.</p>
         </div>
         <div class="project">
@@ -88,11 +68,11 @@
             <p>Think dashboard, think smallest GPT wrappers that allow most mundane tasks to be handled by technology rather than humans, built for internal corporate use.</p>
         </div>
         <div class="project">
-            <h3>Podcast Decoded</h3>
+            <h3><a href="https://x.com/podcastdecoded_">Podcast Decoded</a></h3>
             <p>Did this with my brother a while back - where we listened to podcasts and shared notes - so you don't have to.</p>
         </div>
         <div class="project">
-            <h3>Floww Media</h3>
+            <h3><a href="https://x.com/FlowwMedia">Floww Media</a></h3>
             <p>Did this with two of my brothers - to make exceptional thumbnails for YouTubers - got some clients from India, Korea and the States - couldn't keep up with a job.</p>
         </div>
     </section>
@@ -100,29 +80,29 @@
     <section id="writings">
         <h2>Writings</h2>
         <div class="writing">
-            <h3>Your Day Job is Useless</h3>
-            <p>Brief description or excerpt...</p>
+            <h3><a href="https://tushaarmehtaa.bearblog.dev/your-day-job/">Your Day Job is Useless</a></h3>
+            <p>"I'm just doing this to learn, then I'm going to start my own thing." If I had a dollar for every time I heard that, I'd never need to work again.</p>
         </div>
         <div class="writing">
-            <h3>Make Laziness Enablers</h3>
-            <p>Brief description or excerpt...</p>
+            <h3><a href="https://tushaarmehtaa.bearblog.dev/making-great-things/">Make Laziness Enablers</a></h3>
+            <p>I'm obsessed with laziness right now. Not my own (though my family might disagree). I'm talking about your laziness. The user's laziness.</p>
         </div>
         <div class="writing">
-            <h3>People on Twitter</h3>
-            <p>Brief description or excerpt...</p>
+            <h3><a href="https://tushaarmehtaa.bearblog.dev/people-on-twitter/">People on Twitter</a></h3>
+            <p>People on Twitter. They don't appreciate actionable advice. They don't value the small, daily steps they can take to reach their goals. Why? Because that takes effort.</p>
         </div>
         <div class="writing">
-            <h3>Specialization is overrated</h3>
-            <p>Brief description or excerpt...</p>
+            <h3><a href="https://tushaarmehtaa.bearblog.dev/specialization-is-overrated/">Specialization is overrated</a></h3>
+            <p>"Specialization is for insects." When I first read this quote by Naval 3 years back, it really resonated with me. And I thought, why not?</p>
         </div>
-        <p><a href="#">Read more here</a></p>
+        <p><a href="https://tushaarmehtaa.bearblog.dev/blog/">Read more here</a></p>
     </section>
 
     <section id="connect">
         <h2>Connect</h2>
         <div class="connect-icons">
-            <a href="#" title="Email">✉️</a>
-            <a href="#" title="Twitter">🐦</a>
+            <a href="mailto:tusharmehta2001@icloud.com" title="Email">✉️</a>
+            <a href="https://x.com/tushaarmehtaa" title="Twitter">🐦</a>
             <a href="#" title="LinkedIn">💼</a>
             <a href="#" title="Portfolio">🌐</a>
             <a href="#" title="Calendly">📅</a>
@@ -132,17 +112,5 @@
     <footer>
         <p>© 2024 Tushaar Mehtaa. All rights reserved.</p>
     </footer>
-
-    <script>
-        const themeToggle = document.getElementById('theme-toggle');
-        const body = document.body;
-
-        themeToggle.addEventListener('click', () => {
-            body.classList.toggle('dark-mode');
-            themeToggle.textContent = body.classList.contains('dark-mode') ? '☀️' : '🌓';
-        });
-    </script>
 </body>
 </html>
-
-Create index.html
