--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
     <header>
         <h1>Tushaar Mehtaa</h1>
-        <img id="profile-photo" src="your-photo.jpg" alt="Tushaar Mehtaa">
+        <img id="profile-photo" src="profile-photo.jpg" alt="Tushaar Mehtaa">
         <p>Hello, this is some of the stuff I keep on the Internet. Here you can find almost everything about me, things I've done, things I'm doing, things I want to do and things I'm really obsessed with.</p>
     </header>
 
