--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
             --text-color: #e0e0e0;
             --link-color: #4a9eff;
             --heading-color: #ffffff;
-            --header-bg: #0f0f0f;
         }
         body {
             font-family: 'Montserrat', sans-serif;
@@ -19,20 +18,18 @@
             color: var(--text-color);
             background-color: var(--bg-color);
             margin: 0;
-            padding: 0;
-            padding-top: 60px; /* Account for fixed header */
+            padding: 20px;
+            transition: background-color 0.3s, color 0.3s;
         }
         .container {
             max-width: 800px;
             margin: 0 auto;
-            padding: 20px;
         }
         .light-mode {
             --bg-color: #f5f5f5;
             --text-color: #333333;
             --link-color: #0066cc;
             --heading-color: #1a1a1a;
-            --header-bg: #e0e0e0;
         }
         h1, h2, h3 {
             color: var(--heading-color);
@@ -68,28 +65,17 @@
             object-fit: cover;
             aspect-ratio: 16 / 9;
         }
-        .fixed-header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            height: 50px;
-            background-color: var(--header-bg);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 20px;
-            z-index: 1000;
-        }
         #theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
             background: none;
             border: none;
             font-size: 24px;
             cursor: pointer;
             color: var(--text-color);
-        }
-        #weather-widget {
-            font-size: 14px;
+            transition: opacity 0.3s;
+            z-index: 1000;
         }
         a {
             color: var(--link-color);
@@ -109,7 +95,7 @@
             border-bottom: 1px solid var(--link-color);
         }
         @media (max-width: 600px) {
-            .container {
+            body {
                 padding: 10px;
             }
             .connect-icons {
@@ -122,10 +108,7 @@
     </style>
 </head>
 <body>
-    <div class="fixed-header">
-        <div id="weather-widget"></div>
-        <button id="theme-toggle">☀️</button>
-    </div>
+    <button id="theme-toggle">☀️</button>
 
     <div class="container">
         <header>
@@ -205,7 +188,6 @@
     <script>
         const themeToggle = document.getElementById('theme-toggle');
         const body = document.body;
-        const weatherWidget = document.getElementById('weather-widget');
         const daysSinceBirthday = document.getElementById('days-since-birthday');
 
         // Theme toggle
@@ -213,19 +195,6 @@
             body.classList.toggle('light-mode');
             themeToggle.textContent = body.classList.contains('light-mode') ? '🌙' : '☀️';
         });
-
-        // Weather widget
-        function getWeather() {
-            fetch('https://wttr.in/Bangalore?format=%t+%C')
-                .then(response => response.text())
-                .then(data => {
-                    weatherWidget.textContent = `${data.trim()} in Bangalore`;
-                })
-                .catch(error => {
-                    console.error('Error fetching weather:', error);
-                    weatherWidget.textContent = 'Weather data unavailable';
-                });
-        }
 
         // Calculate days since birthday
         function updateDaysSinceBirthday() {
@@ -249,10 +218,20 @@
             });
         });
 
+        // Hide theme toggle on scroll
+        let lastScrollTop = 0;
+        window.addEventListener('scroll', () => {
+            const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+            if (scrollTop > lastScrollTop) {
+                themeToggle.style.opacity = '0';
+            } else {
+                themeToggle.style.opacity = '1';
+            }
+            lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
+        }, false);
+
         // Initialize
-        getWeather();
         updateDaysSinceBirthday();
-        setInterval(getWeather, 600000); // Update weather every 10 minutes
         setInterval(updateDaysSinceBirthday, 86400000); // Update days since birthday daily
     </script>
 </body>
