--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tushaar Mehtaa - Personal Website</title>
+    <title>Tushaar Mehtaa</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -114,16 +114,17 @@
         <header>
             <h1>Tushaar Mehtaa</h1>
             <img id="profile-photo" src="https://raw.githubusercontent.com/tushaarmehtaa/tushaarmehtaa/b0bbf06c86c8ca7f440084e620aa191ea48f5021/IMG%208532%202.jpg" alt="Tushaar Mehtaa">
-            <p>Hello, this is some of the stuff I keep on the Internet. Here you can find almost everything about me, things I've done, things I'm doing, things I want to do and things I'm really obsessed with.</p>
+            <p>Hello Hello, this is my little corner of the internet. <br> Here you can find things I've done, things I'm doing, things I want to do and things I'm really obsessed with.</p>
         </header>
 
         <section id="about">
             <h2>About Me</h2>
             <ul>
-                <li>I am a 23 year young (yes, I turned 23 just <span id="days-since-birthday"></span> days back) writer and marketer living in Bangalore. I write content for brands and entrepreneurs.</li>
+                <li>I am a 23-year-old (yes, I turned 23 just <span id="days-since-birthday"></span> days back) writer & marketer living in Bangalore. </li>
                 <li>I've been lucky enough to work with some amazing folks since I started out, including <a href="https://x.com/AyushkWadhwa">Ayush Wadhwa</a>, <a href="https://x.com/paraschopra">Paras Chopra</a>, <a href="https://x.com/Saxenasaheb">Saumya Saxena</a>, and so many more founders I really admire.</li>
-                <li>Speaking of numbers, I've done millions of impressions across platforms and content types, whether <a href="https://www.instagram.com/builders.central/">reels</a>, <a href="https://x.com/tushaarmehtaa/status/1765270035721822483">tweets</a>, or <a href="https://www.linkedin.com/posts/karthiksridharan1_startup-activity-7212686224094810112-fMZP?utm_source=share&utm_medium=member_desktop">posts</a>.</li>
-                <li>Currently, I am playing around with Generative AI (not the whole AI - not that technical at the moment) - have been working on a couple of ideas.</li>
+                <li>I've done millions of impressions across platforms and content types, whether <a href="https://www.instagram.com/builders.central/">reels</a>, <a href="https://x.com/tushaarmehtaa/status/1765270035721822483">tweets</a>, or <a href="https://www.linkedin.com/posts/karthiksridharan1_startup-activity-7212686224094810112-fMZP?utm_source=share&utm_medium=member_desktop">posts</a>.</li>
+                <li>Currently, I am playing around with GenAI - have been working on a couple of ideas.</li>
+                <li>Also, I am learning to code (mostly with AI) - so that I can ship stuff independently and much faster.</li>
             </ul>
         </section>
 
@@ -131,11 +132,11 @@
             <h2>Projects</h2>
             <div class="project">
                 <h3><a href="https://jimbro.framer.ai/">JimBro</a></h3>
-                <p>Name sounds funny, but I'm trying to make it easier than ever to log workouts using voice and AI.</p>
+                <p>Name sounds funny, but I'm trying to make it easier than ever to log workouts using voice and AI. </p>
             </div>
             <div class="project">
                 <h3>Internal tools-as-a-service</h3>
-                <p>Think dashboard, think smallest GPT wrappers that allow most mundane tasks to be handled by technology rather than humans, built for internal corporate use.</p>
+                <p>Think dashboard, think smallest GPT wrappers that allow most mundane tasks to be handled by tech rather than humans, built for internal corporate use.</p>
             </div>
             <div class="project">
                 <h3><a href="https://x.com/podcastdecoded_">Podcast Decoded</a></h3>
@@ -143,7 +144,7 @@
             </div>
             <div class="project">
                 <h3><a href="https://x.com/FlowwMedia">Floww Media</a></h3>
-                <p>Did this with two of my brothers - to make exceptional thumbnails for YouTubers - got some clients from India, Korea and the States - couldn't keep up with a job.</p>
+                <p>Did this with two of my brothers - to make thumbnails for YouTubers - got some clients from India, Korea and the States - couldn't keep up with a job.</p>
             </div>
         </section>
 
@@ -151,15 +152,15 @@
             <h2>Writings</h2>
             <div class="writing">
                 <h3><a href="https://tushaarmehtaa.bearblog.dev/your-day-job/">Your Day Job is Useless</a></h3>
-                <p>"I'm just doing this to learn, then I'm going to start my own thing." If I had a dollar for every time I heard that, I'd never need to work again.</p>
+                <p>"I'm just doing this to learn, then I'm going to start my own thing." <br> If I had a dollar for every time I heard that, I'd never need to work again.</p>
             </div>
             <div class="writing">
                 <h3><a href="https://tushaarmehtaa.bearblog.dev/making-great-things/">Make Laziness Enablers</a></h3>
-                <p>I'm obsessed with laziness right now. Not my own (though my family might disagree). I'm talking about your laziness. The user's laziness.</p>
+                <p>I'm obsessed with laziness right now. <br> Not my own (though my family might disagree). I'm talking about your laziness. The user's laziness.</p>
             </div>
             <div class="writing">
                 <h3><a href="https://tushaarmehtaa.bearblog.dev/people-on-twitter/">People on Twitter</a></h3>
-                <p>People on Twitter. They don't appreciate actionable advice. They don't value the small, daily steps they can take to reach their goals. Why? Because that takes effort.</p>
+                <p>People on Twitter. They don't appreciate actionable advice. They don't value the small, daily steps they can take to reach their goals. <br> Why? Because that takes effort.</p>
             </div>
             <div class="writing">
                 <h3><a href="https://tushaarmehtaa.bearblog.dev/specialization-is-overrated/">Specialization is overrated</a></h3>
